--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,90 @@ body {
     font-size: 16px;
     font-weight: 400;
     line-height: 18px;
+
+}
+
+.top__icon {
+    font-size: 50px;
+    animation: rotate infinite 3s ;
+}
+
+.container {
+    max-width: 1140px;
+    padding: 0 15px;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+}
+
+.header__nav {
+    padding: 30px 0;
+    background: #010305CC;
+
+}
+
+.header__wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo__img{
+    animation: rotate infinite 3s;
     
 }
-.top__icon{
-    font-size: 50px;
+.logo__p {
+    font-family: var(--comfort);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 20px;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+.nav__menu {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.menu__link {
+    font-family: var(--mons);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    color: #FFFFFF;
+    transition: 0.5s ease;
+    position: relative;
+}
+
+.menu__link::after {
+    position: absolute;
+    content: '';
+    width: 0;
+    height: 2px;
+    bottom: -44px;
+    left: 50%;
+    background: #ED8E00;
+    transition: 0.5s ease;
+    transform: translateX(-50%);
+}
+
+.menu__link:hover {
+    color: #ED8E00;
+
+}
+
+.menu__link:hover.menu__link::after {
+    width: 100%;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotateY(0deg);
+    }
+
+    to {
+        transform: rotateY(360deg);
+    }
+   
 }
