--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
 
 .top__icon {
     font-size: 50px;
-    animation: rotate infinite 3s ;
+    animation: rotate infinite 3s;
 }
 
 .container {
@@ -69,10 +69,12 @@ body {
     justify-content: space-between;
     align-items: center;
 }
-.logo__img{
+
+.logo__img {
     animation: rotate infinite 3s;
-    
+
 }
+
 .logo__p {
     font-family: var(--comfort);
     font-size: 18px;
@@ -80,6 +82,7 @@ body {
     line-height: 20px;
     text-align: left;
     color: #FFFFFF;
+    text-transform: uppercase;
 }
 
 .nav__menu {
@@ -119,6 +122,87 @@ body {
     width: 100%;
 }
 
+.header {
+    height: 100vh;
+}
+
+.banner {
+    height: 80%;
+    position: relative;
+    background: url(../img/bg.png) no-repeat center/cover;
+    z-index: 10;
+}
+
+.banner__abs {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: #070F19BF;
+    z-index: -1;
+}
+
+.banner__wrap {
+    display: flex;
+    align-items: center;
+}
+
+.banner__desc {
+    max-width: 600px;
+    width: 100%;
+}
+
+.banner__h {
+    font-family: var(--mons);
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 78px;
+    margin-bottom: 30px;
+
+}
+
+.banner__p {
+    font-family: var(--mons);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #C8C8C8;
+    margin-bottom: 50px;
+}
+
+.banner__links {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
+
+.banner__btn {
+    background: #040D1F;
+    border-radius: 4px;
+    padding: 17px 47px;
+    font-family: var(--robot);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 12px;
+    color: #FFFFFF;
+    transition: 0.5s;
+}
+
+.banner__btn:hover {
+    background: #F18128;
+    border-radius: 4px;
+    color: #000000;
+}
+
+
+
+
+
+
+
+
+
 @keyframes rotate {
     from {
         transform: rotateY(0deg);
@@ -127,5 +211,5 @@ body {
     to {
         transform: rotateY(360deg);
     }
-   
+
 }
