--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,13 @@
+
+@media screen and (max-width:1140px) {
+    .films__wrap{
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+
 @media screen and (max-width:640px) {
     .banner__h{
         font-size: 47px;
@@ -23,4 +33,12 @@
         flex-direction: column;
         align-items: center;
     }
+}
+
+@media screen and (max-width:360px) {
+    .banner__h{
+        font-size: 28px;
+        line-height: 30px;
+    }
+
 }
