--- a/css/media.css
+++ b/css/media.css
@@ -5,8 +5,14 @@
         justify-content: center;
         align-items: center;
     }
+    
 }
 
+@media screen and (max-width:768px) {
+    .trailer__post{
+        width: 100%;
+    }
+}
 
 @media screen and (max-width:640px) {
     .banner__h{
