--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,9 @@
     --bg: #040D1F;
     --orange: #F18128;
     --black: #000;
-    --comfort: 'Comfortaa' sans-serif;
-    --mons: 'Montserrat' sans-serif;
-    --robot: 'Roboto' sans-serif;
+    --comfort: 'Comfortaa', sans-serif;
+    --mons: 'Montserrat', sans-serif;
+    --robot: 'Roboto', sans-serif;
     --w: #FFF;
 }
 
@@ -184,6 +184,7 @@ body {
     line-height: 12px;
     color: #FFFFFF;
     transition: 0.5s;
+    display: inline-block;
 }
 
 .banner__btn:hover {
@@ -290,7 +291,57 @@ body {
     line-height: 21px;
 }
 
+.trailer {
+    padding: 42px 0 80px;
+    position: relative;
+    background: linear-gradient(90deg, #DEF7FF 0%, #F4FCFF 45.64%, rgba(255, 255, 255, 0) 100.72%);
+}
 
+.video {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 60%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
+.trailer__decs {
+    max-width: 558px;
+    width: 100%;
+}
+
+.trailer__post {
+    width: 80%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.trailer__p {
+    font-family: var(--robot);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: var(--black);
+    margin: 51px 0 55px;
+}
+
+.btn {
+    font-family: var(--robot);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 12px;
+    padding: 18px 48px;
+    background: #F18128;
+    border-radius: 4px;
+    color: var(--black);
+    transition: 0.5s;
+    display: inline-block;
+}
+.btn:hover{
+    background: var(--orange);
+}
 
 
 @keyframes rotate {
