--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ body {
     position: absolute;
     right: 0;
     top: 0;
-    width: 60%;
+    width: 90%;
     height: 100%;
     object-fit: cover;
     z-index: -1;
@@ -339,8 +339,263 @@ body {
     transition: 0.5s;
     display: inline-block;
 }
-.btn:hover{
+
+.collections {
+    padding: 61px 0 63px;
+}
+
+.collections__wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.collect__card {
+    background: url(../img/collect-1.png) no-repeat center/cover;
+    max-width: 350px;
+    width: 100%;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 193px;
+    z-index: 9;
+    overflow: hidden;
+}
+
+.collect__card:nth-child(2) {
+    background: url(../img/collect-2.png) no-repeat center/cover;
+}
+
+.collect__card:nth-child(3) {
+    background: url(../img/collect-3.png) no-repeat center/cover;
+
+}
+
+.collect__bg {
+    background: linear-gradient(270deg, rgba(7, 15, 25, 0.56) 0%, rgba(49, 114, 9, 0.56) 100%);
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.lines {
+    position: absolute;
+    width: 97%;
+    height: 94%;
+    top: 7px;
+    left: 6px;
+    z-index: 10;
+    transform: scale(1.5);
+    transition: 0.5s;
+}
+
+.collect__body {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 15px;
+    transition: 0.5s;
+}
+
+.collect__icon {
+    font-size: 40px;
+    transition: 0.5s;
+}
+
+.collect__card:hover .lines {
+    transform: scale(1);
+}
+
+.collect__card:hover .collect__body {
+    transform: scale(1.3);
+}
+
+.collect__card:hover .collect__icon {
+    transform: rotateX(360deg);
+}
+
+.series__thrones {
+    background: url(../img/Series-1.png) no-repeat center/cover;
+    position: relative;
+    border-radius: 6px;
+    width: 100%;
+    height: 436px;
+    z-index: 10;
+}
+
+.thrones__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(95.68deg, rgba(35, 35, 35, 0.8) 10.86%, rgba(11, 11, 11, 0.6) 110.86%);
+    border-radius: 6px;
+    z-index: -1;
+}
+
+.thrones__content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+    height: 100%;
+}
+
+.thrones__h {
+    font-family: var(--comfort);
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 45px;
+}
+
+.thrones__p {
+    font-family: var(--comfort);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    margin: 27px 0 30px;
+}
+
+.thrones__btn {
+    font-family: var(--robot);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 12px;
+    padding: 18px 45px;
     background: var(--orange);
+    color: var(--black);
+    border: none;
+    border-radius: 4px;
+}
+
+.series__wanda {
+    background: url(../img/series-2.png) no-repeat center/cover;
+    max-width: 540px;
+    width: 100%;
+    height: 404px;
+    z-index: 10;
+    position: relative;
+    border-radius: 6px;
+}
+
+.wanda__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(95.68deg, rgba(35, 35, 35, 0.8) 10.86%, rgba(11, 11, 11, 0.6) 110.86%);
+    border-radius: 6px;
+    z-index: -1;
+}
+
+.series__card {
+    background: url(../img/series-3.png) no-repeat center/cover;
+    max-width: 255px;
+    width: 100%;
+    height: 183px;
+    z-index: 10;
+    position: relative;
+}
+
+.series__card:nth-child(2) {
+    background: url(../img/series-4.png) no-repeat center/cover;
+    border-radius: 6px;
+
+}
+
+.series__card:nth-child(3) {
+    background: url(../img/series-5.png) no-repeat center/cover;
+    border-radius: 6px;
+
+}
+
+.series__card:nth-child(4) {
+    background: url(../img/series-6.png) no-repeat center/cover;
+    border-radius: 6px;
+
+}
+
+.inner__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(95.68deg, rgba(35, 35, 35, 0.8) 10.86%, rgba(11, 11, 11, 0.6) 110.86%);
+    border-radius: 6px;
+    z-index: -1;
+}
+
+.series__wrap {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin: 30px 0;
+    gap: 30px;
+}
+
+.series__inner {
+    display: flex;
+    gap: 30px;
+    max-width: 570px;
+    width: 100%;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.wanda__content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
+.inner__content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
+.footer {
+    margin-top: 63px;
+    background: var(--orange);
+}
+
+.footer__wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.footer__brand {
+    gap: 50px;
+    display: flex;
+}
+
+.footer__h {
+    font-family: var(--comfort);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 20px;
 }
 
 
