--- a/css/media.css
+++ b/css/media.css
@@ -5,7 +5,25 @@
         justify-content: center;
         align-items: center;
     }
-    
+    .collections__wrap{
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+    }
+    .series__thrones{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .thrones__content{
+        padding: 15px 0;
+    }
+    .series__wrap{
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 @media screen and (max-width:768px) {
@@ -17,6 +35,12 @@
 @media screen and (max-width:640px) {
     .banner__h{
         font-size: 47px;
+    }
+    .footer__wrap{
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
     }
 }
 
@@ -41,10 +65,22 @@
     }
 }
 
+@media screen and (max-width:400px) {
+    .thrones__h{
+    font-size: 32px;
+    line-height: 40px;
+    
+        
+    }
+}
+
 @media screen and (max-width:360px) {
     .banner__h{
         font-size: 28px;
         line-height: 30px;
     }
-
+    .footer__h{
+    font-size: 16px;
+        
+    }
 }
